--- a/_config.yml
+++ b/_config.yml
@@ -1,57 +1,15 @@
-# Site Settings
-title: Mere Blog Theme
-tagline: Mere Blog Theme
+# Site settings
+title: Twenty Blog
 email: your-email@domain.com
-description: >
-  The demo site for Mere Blog Theme, made for Jekyll and GitHub pages websites
-baseurl: 
-url: "https://www.csrhymes.com"
-permalink: pretty
-remote_theme : chrisrhymes/mere-blog-theme
-paginate: 6
-paginate_path: "/page:num"
+description: > # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl:
+remote_theme: old-jekyll-templates/Twenty-Jekyll-Theme
+url: "http://locahost:4000" # the base hostname & protocol for your site
+twitter_username: jekyllrb
+github_username:  jekyll
 
-plugins:
-  - jekyll-sitemap
-  - jekyll-paginate
-  - jekyll-feed
-  - jekyll-seo-tag
-  - kramdown
-  - rouge
-
-exclude:
-  - Gemfile
-  - clean-theme.gemspec
-  - Gemfile.lock
-  - node_modules
-  - vendor/bundle/
-  - vendor/cache/
-  - vendor/gems/
-  - vendor/ruby/
-
-livereload: true
-
-sass:
-  style: compressed
-  source_dir: _sass
-
-defaults:
-  -
-    scope:
-      path: ""
-      type: "posts"
-    values:
-      author: "C.S. Rhymes"
-      layout: post
-      image: /img/home.jpg
-      show_sidebar: true
-  -
-    scope:
-      path: ""
-      type: "authors"
-    values:
-      layout: "author"
-
-collections:
-  authors:
-    output: true
+# Build settings
+markdown: kramdown
